--- a/app.json
+++ b/app.json
@@ -1,9 +1,8 @@
 {
   "name": "ID Bot",
   "description": "Telegram bot to get id of any user, group, bot, channels and even stickers.",
-  "logo": "https://telegra.ph/file/784c14c76533f944ae9b0.jpg"
-  "repository: "https://github.com/infotechIT/ID-Bot"
-  "keywords":
+  "logo": "https://telegra.ph/file/784c14c76533f944ae9b0.jpg",
+  "keywords": [
     "telegram",
     "bot",
     "python",
@@ -26,7 +25,7 @@
          "plan": "heroku-postgresql"
       }
    ],
-  "repository": "https://github.com/StarkBotsIndustries/ID-Bot",
+  "repository": "https://github.com/infotechIT/ID-Bot",
   "env": {
     "ENVIRONMENT": {
       "description": "Don't change ANYTHING.",
